--- a/src/sass/theme/_blocks.scss
+++ b/src/sass/theme/_blocks.scss
@@ -212,9 +212,6 @@ body.understrap-no-sidebar {
     &.is-style-gapless,
     &.is-style-gapless-border {
             gap: 0;
-        @include media-breakpoint-up(md) {
-            margin-bottom: 0;
-        }
     }
 
     &.is-style-gapless-border {
